atualização do link

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <img class="img-header" src="./img/bikcraft.svg" alt="bikcraft">
             <nav class="menu" aria-label="Menu principal">
                 <ul>
-                    <li><a class="menu-item" href="/"> sobre </a></li>
-                    <li><a class="menu-item" href="/"> produtos </a></li>
-                    <li><a class="menu-item" href="/"> lojas </a></li>
-                    <li><a class="menu-item" href="/"> contato </a></li>
+                    <li><a class="menu-item" href="./"> sobre </a></li>
+                    <li><a class="menu-item" href="./"> produtos </a></li>
+                    <li><a class="menu-item" href="./"> lojas </a></li>
+                    <li><a class="menu-item" href="./"> contato </a></li>
                 </ul>
             </nav>
         </header>        
